--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
       <div class="span12"><h2>This is the main-section</h2></div>
     </div>
 
+    <div class="contact">
+      <div class="span12"><h2>This is the contact-section</h2></div>
+    </div>
+
     <div class="footer">
       <div class="span12"><h2>This is the footer-section</h2></div>
     </div>
+
+    
   </body>
 </html>
