--- a/index.html
+++ b/index.html
@@ -23,35 +23,46 @@
       media="screen"
     />
 
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
+    </style>
+
     <title>Document</title>
   </head>
 
   <body>
     <div class="main-menu">
       <ul class="topnav">
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="right"><a href="#about">About</a></li>
+        <li>
+          <a href="index.html" class="logo"
+            ><img
+              src="images/logotomorrowlandblanco.png"
+              alt="tomorrowland logo"
+              width="75"
+              height="50"
+          /></a>
+        </li>
+        <li><a href="#contact">ARROUND THE WORLD</a></li>
+        <li><a href="#contact">BÉLGICA</a></li>
+        <li><a href="#contact">TIENDA</a></li>
+        <li><a href="#contact">CONTACTO</a></li>
       </ul>
     </div>
 
-    <div class="header row-fluid">
-      <div class="span6"><h2>This is the header-section</h2></div>
+    <div class="section1">
+      <div class="span12"><h2>This is the section1</h2></div>
     </div>
 
-    <div class="main">
-      <div class="span12"><h2>This is the main-section</h2></div>
+    <div class="section2">
+      <div class="span12"><h2>This is the section2</h2></div>
     </div>
 
-    <div class="contact">
-      <div class="span12"><h2>This is the contact-section</h2></div>
+    <div class="section3">
+      <div class="span12"><h2>This is the section3</h2></div>
     </div>
 
-    <div class="footer">
-      <div class="span12"><h2>This is the footer-section</h2></div>
+    <div class="section4">
+      <div class="span12"><h2>This is the section4</h2></div>
     </div>
-
-    
   </body>
 </html>
