size changes in home section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       </ul>
     </div>
 
+    <div class="banner">
+      <div class="span12"><h2>This is the banner</h2></div>
+    </div>
+
     <div class="section1">
       <div class="span12"><h2>This is the section1</h2></div>
     </div>
