--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
     </div>
 
     <div class="banner">
+      
       <div class="span12"><h2>This is the banner</h2></div>
+      <div class="tiempos">
+        <p>
+          En estos tiempos poco comunes<br> Tomorrowland buscó un nuevo destino,<br>
+          donde nosotros, las personas del mañana,<br> estemos unidas<br> alrededor del
+          mundo.
+        </p>
+      </div>
     </div>
 
     <div class="section1">
