--- a/index.html
+++ b/index.html
@@ -51,14 +51,26 @@
     </div>
 
     <div class="banner">
-      
       <div class="span12"><h2>This is the banner</h2></div>
-      <div class="tiempos">
-        <p>
-          En estos tiempos poco comunes<br> Tomorrowland buscó un nuevo destino,<br>
-          donde nosotros, las personas del mañana,<br> estemos unidas<br> alrededor del
-          mundo.
-        </p>
+      <div class="flex-container">
+        <div class="flex-item around">
+          <p>Around The World</p>
+          <p>Festival Digital</p>
+          <p>JUL 26&27</p>
+        </div>
+        
+        <div class="flex-item tiempos">
+          <p>
+            En estos tiempos poco comunes<br />
+            Tomorrowland buscó un nuevo destino,<br />
+            donde nosotros, las personas del mañana,<br />
+            estemos unidas<br />
+            alrededor del mundo.
+        </div>
+        <div class="flex-item tickets">
+          <button>Tickets</button>
+          <button>Paquetes</button>
+        </div>
       </div>
     </div>
 
