--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -22,11 +23,7 @@
       href="styles/main-menu.css"
       media="screen"
     />
-    <!--
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
-    </style>
-    -->
+
 
     <title>Document</title>
   </head>
@@ -51,12 +48,12 @@
     </div>
 
     <div class="banner">
-      <div class="span12"><h2>This is the banner</h2></div>
+      <div><h2>This is the banner</h2></div>
       <div class="flex-container">
         <div class="flex-item around">
-          <p>Around The World</p>
-          <p>Festival Digital</p>
-          <p>JUL 26&27</p>
+          <p class="around-1">Around The World</p>
+          <p class="around-2">Festival Digital</p>
+          <p class="around-3">JUL 26&27</p>
         </div>
         
         <div class="flex-item tiempos">
@@ -75,19 +72,35 @@
     </div>
 
     <div class="section1">
-      <div class="span12"><h2>This is the section1</h2></div>
+      <div><h2>This is the section1</h2></div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md">
+            <p>The Reflection of Love</p>
+            <p>Capitulo 1</p>
+          </div>
+          <div class="col-md section-1-paragraph">
+            <p>Tomorrowland 2020 es un lugar que te permite celebrar con intensidad, donde puedes compartir tus emociones y unirte a 
+              las Personas del Mañana alrededor del Mundo. La música y el entretenimiento yacen en su corazón, traidos para ti por los mejores artistas del Mundo.
+              En estos tiempos poco comunes Tomorrowland buscó un nuevo destino, donde nosotros, las personas del mañana, estemos unidas alrededor del mundo.</p>
+            <p>Preparate para descubrir un mundo nuevo en el cual esperar lo inesperado. Da un paso al magnífico y surreal ambiente con un familiar pero a la vez nuevo diseño de escenario y un espectáculo sin precedentes.</p>
+            <p>Esta nueva locación del Tomorrowland no puede ser visitada físicamente. Por el contrario, la experiencia viene a ti. Será una experiencia única en la vida, asi que prepárate para escribir la historia juntos. Las personas del Mañana nunca se unieron de ésta forma. Jamás las personas de todo el mundo se sintieron tan cerca.</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="section2">
-      <div class="span12"><h2>This is the section2</h2></div>
+      <di><h2>This is the section2</h2></div>
     </div>
 
     <div class="section3">
-      <div class="span12"><h2>This is the section3</h2></div>
+      <div><h2>This is the section3</h2></div>
     </div>
 
     <div class="section4">
-      <div class="span12"><h2>This is the section4</h2></div>
+      <div><h2>This is the section4</h2></div>
     </div>
   </body>
 </html>
