home section 1 finished

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
 
       <div class="container-fluid h-100">
         <div class="row">
-          <div class="col-md-7">
-            <p style="font-family: titlingstand; font-size: 38px;">The Reflection of Love</p>
-            <p class="sky-stroke" style="font-family: titlingstand; font-size: 30px; "> Capitulo 1</p>
+          <div class="col-md-7" style="padding-left: 35px;">
+            <p style="font-family: titlingstand; font-size: 38px;  margin-top: 4rem; margin-bottom: 0;
+            line-height: 28px;">The Reflection of Love</p>
+            <p class="sky-stroke" style="font-family: titlingstand; font-size: 30px; "> Capitulo I</p>
           </div>
           <div class="col-md-5 section-1-paragraph">
             <p>Tomorrowland 2020 es un lugar que te permite celebrar con intensidad, donde puedes compartir tus emociones y unirte a 
