--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="banner">
-      <div><h2>This is the banner</h2></div>
+      <div><h2 class="helper">This is the banner</h2></div>
       <div class="flex-container">
         <div class="flex-item around">
           <p class="around-1">Around The World</p>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="section1">
-      <div><h2>This is the section1</h2></div>
+      <div><h2 class="helper">This is the section1</h2></div>
 
       <div class="container-fluid h-100">
         <div class="row">
@@ -107,15 +107,19 @@
     </div>
 
     <div class="section2">
-      <di><h2>This is the section2</h2></div>
+      <div><h2 class="helper">This is the section2</h2></div>
+        <div class="tomo">
+          <h2 class="tomorrow">TOMORROWLAND</h2>
+          <h2 class="after">After Movie</h2>
+        </div>
     </div>
 
     <div class="section3">
-      <div><h2>This is the section3</h2></div>
+      <div><h2 class="helper">This is the section3</h2></div>
     </div>
 
     <div class="section4">
-      <div><h2>This is the section4</h2></div>
+      <div><h2 class="helper">This is the section4</h2></div>
     </div>
   </body>
 </html>
