section 2 almost finished

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 margin-bottom: 20px;">
    
     
-                <h3 style="color: #75bce6; font-family: 'Robotoregular'; font-size: 24px;">Around The World</h3>
+                <h3 style="color: #75bce6; font-family: Robotoregular; font-size: 24px; text-shadow: 0px 0px 8px rgba(118, 187, 244, 1);">Around The World</h3>
                 <h4 style="color: white; font-family: 'Robotoregular'; font-size: 22px;">20 días, 8:30:54</h4>
                 <button style="float: right;
                 margin-bottom: 20px;
@@ -111,6 +111,11 @@
         <div class="tomo">
           <h2 class="tomorrow">TOMORROWLAND</h2>
           <h2 class="after">After Movie</h2>
+          <ul class="vive">
+            <li>Vive hoy</li>
+            <li>Ama mañana</li>
+            <li>Une para siempre</li>
+          </ul>
         </div>
     </div>
 
