--- a/index.html
+++ b/index.html
@@ -121,6 +121,29 @@
 
     <div class="section3">
       <div><h2 class="helper">This is the section3</h2></div>
+      <div class="row alpha-row">
+        <div class="col-md-6 alpha-col">
+          <h3>La Reunión</h3>
+          <button>VER MÁS</button>
+        </div>
+        <div class="col-md-6 beta-col">
+          <h3>Dreamville</h3>
+          <button>VER MÁS</button>
+        </div>
+      </div>
+
+      <div class="row beta-row ">
+        <div class="col-md-6 gamma-col">
+          <h3>Instalaciones</h3>
+          <button>VER MÁS</button>
+        </div>
+        <div class="col-md-6 delta-col">
+          <h3>Crea amistades,</h3>
+          <h3>Comparte experiencias</h3>
+          <p>Además de ser un festival para acampar, Dreamville es un un lugar para forjar amistades, compartir experiencias y recargar baterías. En resumen, es una experiencia y locación que todo el mundo siente como su hogar.</p>
+        </div>
+      </div>
+
     </div>
 
     <div class="section4">
