--- a/index.html
+++ b/index.html
@@ -192,14 +192,20 @@
           <div class="button-container"><button>VER MÁS</button></div>
         </div>
         <div class="col-md-6 delta-col">
-          <h3>Crea amistades,</h3>
-          <h3>Comparte experiencias</h3>
-          <p>
-            Además de ser un festival para acampar, Dreamville es un un lugar
-            para forjar amistades, compartir experiencias y recargar baterías.
-            <br />En resumen, es una experiencia y locación que todo el mundo
-            siente como su hogar.
-          </p>
+
+          <div class="amistad">
+
+            <h3>Crea amistades,</h3>
+            <h3>Comparte experiencias</h3>
+            <p>
+              Además de ser un festival para acampar, Dreamville es un un lugar
+              para forjar amistades, compartir experiencias y recargar baterías.
+              <br />En resumen, es una experiencia y locación que todo el mundo
+              siente como su hogar.
+            </p>
+          </div>
+            
+          
         </div>
       </div>
     </div>
