more fixes before bed

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div><h2 class="helper">This is the banner</h2></div>
       <div class="flex-container">
         <div class="flex-item around">
+          <img src="images/logoazul.png" alt="">
           <p class="around-1">Around The World</p>
           <p class="around-2">Festival Digital</p>
           <p class="around-3">JUL 26&27</p>
