--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       media="screen"
     />
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="styles/fonts.css"
+      media="screen"
+    />
+
     <title>Document</title>
   </head>
 
@@ -50,7 +57,7 @@
       <div><h2 class="helper">This is the banner</h2></div>
       <div class="flex-container">
         <div class="flex-item around">
-          <img src="images/logoazul.png" alt="">
+          <img src="images/logoazul.png" alt="" />
           <p class="around-1">Around The World</p>
           <p class="around-2">Festival Digital</p>
           <p class="around-3">JUL 26&27</p>
@@ -193,9 +200,7 @@
           <div class="button-container"><button>VER MÁS</button></div>
         </div>
         <div class="col-md-6 delta-col">
-
           <div class="amistad">
-
             <h3>Crea amistades,</h3>
             <h3>Comparte experiencias</h3>
             <p>
@@ -205,14 +210,48 @@
               siente como su hogar.
             </p>
           </div>
-            
-          
         </div>
       </div>
     </div>
 
     <div class="section4">
-      <div><h2 class="helper">This is the section4</h2></div>
+      <div><h2 class="helper">section4</h2></div>
+      <div class="logo">
+        <a href="#" class="logo"
+          ><img
+            src="images/logotomorrowlandblanco.png"
+            alt="tomorrowland logo"
+            width="75"
+            height="50"
+        /></a>
+      </div>
+      <div class="favicons">
+        <ul>
+          <li>
+            <a href="#" class="logo"
+              ><img src="images/botonfacebook.png" alt="facebook logo"
+            /></a>
+          </li>
+          <li>
+            <a href="#" class="logo"
+              ><img src="images/botonspotify.png" alt="spotify logo"
+            /></a>
+          </li>
+          <li>
+            <a href="#" class="logo"
+              ><img src="images/botoninstagram.png" alt="instagram logo"
+            /></a>
+          </li>
+          <li>
+            <a href="#" class="logo"
+              ><img src="images/botontwitter.png" alt="twitter logo"
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <div class="copyleft">
+        <p>Ⓒ 2020. Tomorrowland.</p>
+      </div>
     </div>
   </body>
 </html>
