music player placeholder

--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
       <div class="copyleft">
         <p>Ⓒ 2020. Tomorrowland.</p>
       </div>
+      <div class="dummy-radio">
+        <a href="#" class="radio"
+              ><img src="images/dummy-radio.png" alt="radio placeholder"
+            /></a>
+      </div>
     </div>
   </body>
 </html>
