saving to switch computer
LLEGO LA LUZ

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <div class="copyleft">
         <p>Ⓒ 2020. Tomorrowland.</p>
       </div>
-      <div class="dummy-radio">
+      <div class="dummy-radio col-md-12">
         <a href="#" class="radio"
               ><img src="images/dummy-radio.png" alt="radio placeholder"
             /></a>
