adding boton-flecha

--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
               <br />En resumen, es una experiencia y locación que todo el mundo
               siente como su hogar.
             </p>
+            <div class="auxilio">
+              <a href="#" class="botonflecha"
+              ><img src="images/botonflecha.png" alt="boton con flecha"
+            /></a>
+            </div>
+            
           </div>
         </div>
       </div>
