--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <p class="around-1">Around The World</p>
           <p class="around-2">Festival Digital</p>
           <p class="around-3">JUL 26&27</p>
+          <a href="#" class="botonflecha" 
+              ><img src="images/botonflecha.png" style="float: right;"  alt="boton con flecha"
+            /></a>
         </div>
 
         <div class="flex-item tiempos">
@@ -83,24 +86,13 @@
     <div class="section1">
       <div><h2 class="helper">This is the section1</h2></div>
 
-      <div class="container-fluid h-100">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-md-7" style="padding-left: 35px;">
-            <p
-              style="
-                font-family: titlingstand;
-                font-size: 38px;
-                margin-top: 4rem;
-                margin-bottom: 0;
-                line-height: 28px;
-              "
-            >
+          <div class="col-md-7">
+            <p class="reflection">
               The Reflection of Love
             </p>
-            <p
-              class="sky-stroke"
-              style="font-family: titlingstand; font-size: 30px;"
-            >
+            <p class="sky-stroke">
               Capitulo I
             </p>
           </div>
@@ -211,10 +203,9 @@
             </p>
             <div class="auxilio">
               <a href="#" class="botonflecha"
-              ><img src="images/botonflecha.png" alt="boton con flecha"
-            /></a>
+                ><img src="images/botonflecha.png" alt="boton con flecha"
+              /></a>
             </div>
-            
           </div>
         </div>
       </div>
@@ -260,8 +251,8 @@
       </div>
       <div class="dummy-radio col-md-12">
         <a href="#" class="radio"
-              ><img src="images/dummy-radio.png" alt="radio placeholder"
-            /></a>
+          ><img src="images/dummy-radio.png" alt="radio placeholder"
+        /></a>
       </div>
     </div>
   </body>
