--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
+    <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -31,7 +34,7 @@
       media="screen"
     />
 
-    <title>Document</title>
+    <title>TOMORROWLAND - Festival Digital</title>
   </head>
 
   <body>
