--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               height="50"
           /></a>
         </li>
-        <li><a href="#contact">ARROUND THE WORLD</a></li>
+        <li><a href="./around.html">ARROUND THE WORLD</a></li>
         <li><a href="#contact">BÉLGICA</a></li>
         <li><a href="#contact">TIENDA</a></li>
         <li><a href="#contact">CONTACTO</a></li>
