removing empty hrefs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" href="images/favicon.png"/>
-    <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 
     <link
       rel="stylesheet"
@@ -64,9 +64,12 @@
           <p class="around-1">Around The World</p>
           <p class="around-2">Festival Digital</p>
           <p class="around-3">JUL 26&27</p>
-          <a href="#" class="botonflecha" 
-              ><img src="images/botonflecha.png" style="float: right;"  alt="boton con flecha"
-            /></a>
+          <a href="#" class="botonflecha"
+            ><img
+              src="images/botonflecha.png"
+              style="float: right;"
+              alt="boton con flecha"
+          /></a>
         </div>
 
         <div class="flex-item tiempos">
@@ -217,7 +220,7 @@
     <div class="section4">
       <div><h2 class="helper">section4</h2></div>
       <div class="logo">
-        <a href="#" class="logo"
+        <a  class="logo"
           ><img
             src="images/logotomorrowlandblanco.png"
             alt="tomorrowland logo"
@@ -228,22 +231,32 @@
       <div class="favicons">
         <ul>
           <li>
-            <a href="#" class="logo"
+            <a
+              href="https://www.facebook.com/tomorrowland/"
+              class="logo"
+              target="_blank"
               ><img src="images/botonfacebook.png" alt="facebook logo"
             /></a>
           </li>
           <li>
-            <a href="#" class="logo"
+            <a
+              href="https://open.spotify.com/user/tomorrowlandofficial"
+              class="logo"
+              target="_blank"
               ><img src="images/botonspotify.png" alt="spotify logo"
             /></a>
           </li>
           <li>
-            <a href="#" class="logo"
+            <a href="https://www.instagram.com/tomorrowland"
+            class="logo"
+            target="_blank"
               ><img src="images/botoninstagram.png" alt="instagram logo"
             /></a>
           </li>
           <li>
-            <a href="#" class="logo"
+            <a href="https://twitter.com/tomorrowland"
+            class="logo"
+            target="_blank"
               ><img src="images/botontwitter.png" alt="twitter logo"
             /></a>
           </li>
@@ -253,7 +266,7 @@
         <p>Ⓒ 2020. Tomorrowland.</p>
       </div>
       <div class="dummy-radio col-md-12">
-        <a href="#" class="radio"
+        <a  class="radio"
           ><img src="images/dummy-radio.png" alt="radio placeholder"
         /></a>
       </div>
