removing helpers from home

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body>
     <div class="main-menu">
       <ul class="topnav">
-        <li>
+        <li class="logo-li">
           <a href="index.html" class="logo"
             ><img
               src="images/logotomorrowlandblanco.png"
@@ -49,7 +49,7 @@
               height="50"
           /></a>
         </li>
-        <li><a href="./around.html">ARROUND THE WORLD</a></li>
+        <li><a href="./around.html">AROUND THE WORLD</a></li>
         <li><a href="#contact">BÉLGICA</a></li>
         <li><a href="#contact">TIENDA</a></li>
         <li><a href="#contact">CONTACTO</a></li>
