around page fixes

--- a/around.html
+++ b/around.html
@@ -91,13 +91,79 @@
     <div class="section2">
       <div><h2 class="helper">This is the section2</h2></div>
       <div class="tomo">
+        <img src="images/aftermovie.png" alt="play button" />
         <h2 class="tomorrow">TOMORROWLAND</h2>
-        <h2 class="after">After Movie</h2>
-        <ul class="vive">
-          <li>Vive hoy</li>
-          <li>Ama mañana</li>
-          <li>Une para siempre</li>
+        <button>VER TRAILER</button>
+      </div>
+    </div>
+    <div class="section3">
+      <div class="row">
+        <div class="col-md-5">
+          <h3>Line-up</h3>
+        </div>
+        <div class="col-md-7"></div>
+      </div>
+    </div>
+
+    <div class="section4">
+      <div><h2 class="helper">section4</h2></div>
+      <div class="vertical-line-long">
+        <img
+            src="images/vertical-line-long.png"
+        />
+      </div>
+      <div class="logo">
+        <a class="logo"
+          ><img
+            src="images/logotomorrowlandblanco.png"
+            alt="tomorrowland logo"
+            width="75"
+            height="50"
+        /></a>
+      </div>
+      <div class="favicons">
+        <ul>
+          <li>
+            <a
+              href="https://www.facebook.com/tomorrowland/"
+              class="logo"
+              target="_blank"
+              ><img src="images/botonfacebook.png" alt="facebook logo"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://open.spotify.com/user/tomorrowlandofficial"
+              class="logo"
+              target="_blank"
+              ><img src="images/botonspotify.png" alt="spotify logo"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/tomorrowland"
+              class="logo"
+              target="_blank"
+              ><img src="images/botoninstagram.png" alt="instagram logo"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com/tomorrowland"
+              class="logo"
+              target="_blank"
+              ><img src="images/botontwitter.png" alt="twitter logo"
+            /></a>
+          </li>
         </ul>
+      </div>
+      <div class="copyleft">
+        <p>Ⓒ 2020. Tomorrowland.</p>
+      </div>
+      <div class="dummy-radio col-md-12">
+        <a class="radio"
+          ><img src="images/dummy-radio.png" alt="radio placeholder"
+        /></a>
       </div>
     </div>
   </body>
