more fixes to around page

--- a/around.html
+++ b/around.html
@@ -71,17 +71,19 @@
           /></a>
         </div>
 
-        <div class="flex-item tiempos">
-          <p>
-            En estos tiempos poco comunes<br />
-            Tomorrowland buscó un nuevo destino,<br />
-            donde nosotros, las personas del mañana,<br />
-            estemos unidas<br />
-            alrededor del mundo.
-          </p>
-        </div>
-
         <div class="flex-item tickets">
+          <p>
+            Tomorrowland 2020 es un lugar que te permite celebrar con
+            intensidad, donde puedes compartir tus emociones y unirte a <br />
+            las Personas del Mañana alrededor del Mundo. La música y el
+            entretenimiento yacen en su corazón, traidos para ti por los mejores
+            artistas del Mundo.
+          </p>
+          <p>
+            En estos tiempos poco comunes, Tomorrowland busca un nuevo destino,
+            donde nosotros, las Personas del Mañana, estemos unidas alrededor
+            del mundo.
+          </p>
           <button>Tickets</button>
           <button>Paquetes</button>
         </div>
@@ -108,9 +110,7 @@
     <div class="section4">
       <div><h2 class="helper">section4</h2></div>
       <div class="vertical-line-long">
-        <img
-            src="images/vertical-line-long.png"
-        />
+        <img src="images/vertical-line-long.png" />
       </div>
       <div class="logo">
         <a class="logo"
