around page banner mods

--- a/around.html
+++ b/around.html
@@ -84,8 +84,11 @@
             donde nosotros, las Personas del Mañana, estemos unidas alrededor
             del mundo.
           </p>
-          <button>Tickets</button>
-          <button>Paquetes</button>
+          <div class="button-container">
+            <button>Tickets</button>
+            <button>Paquetes</button>
+          </div>
+          
         </div>
       </div>
     </div>
