--- a/around.html
+++ b/around.html
@@ -88,7 +88,6 @@
             <button>Tickets</button>
             <button>Paquetes</button>
           </div>
-          
         </div>
       </div>
     </div>
@@ -101,12 +100,72 @@
         <button>VER TRAILER</button>
       </div>
     </div>
+
     <div class="section3">
       <div class="row">
         <div class="col-md-5">
           <h3>Line-up</h3>
         </div>
         <div class="col-md-7"></div>
+      </div>
+      <div class="row artists-container">
+        <div class="col-md-4">
+          <div class="white-box ">
+            <h4>MAINSTAGE</h4>
+            <ul>
+              <li>Afrojack</li>
+              <li>Alan Walker</li>
+              <li>Armin van Buuren</li>
+              <li>Dimitri Vegas & Like Mike</li>
+              <li>Lost Frequencies</li>
+              <li>Nervo</li>
+              <li>Oliver Heldens</li>
+              <li>Paul Kalkbrenner</li>
+              <li>Steve Aoki</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4 ">
+          <div class="white-box">
+            <h4>ATMOSPHERE</h4>
+            <div class="ulcontainer">
+            <ul>
+              <li>Dixon</li>
+              <li>Stephan Bodzin</li>
+              <li>Tale Of Us</li>
+            </ul>
+            </div>
+          </div>
+          <div class="white-box mt-5">
+            <h4>CAVE</h4>
+              <div class="ulcontainer">
+              <ul>
+                <li>Carnage</li>
+                <li>Eptic</li>
+                <li>Modestep</li>
+              </ul>
+            </div>
+            
+          </div>
+        </div>
+        <div class="col-md-4 ">
+          <div class="white-box">
+            <h4>CORE</h4>
+            <ul>
+              <li>Adam Beyer</li>
+              <li>ANNA</li>
+              <li>Charlotte de Witte</li>
+            </ul>
+          </div>
+          <div class="white-box mt-5">
+            <h4>FREEDOM</h4>
+            <ul>
+              <li>Claptone</li>
+              <li>Jack Back</li>
+              <li>Solardo</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
