still working on section 3

--- a/around.html
+++ b/around.html
@@ -110,7 +110,7 @@
       </div>
       <div class="row artists-container">
         <div class="col-md-4">
-          <div class="white-box ">
+          <div class="white-box alpha">
             <h4>MAINSTAGE</h4>
             <ul>
               <li>Afrojack</li>
@@ -134,7 +134,7 @@
               <li>Tale Of Us</li>
             </ul>
           </div>
-          <div class="white-box mt-5">
+          <div class="white-box special-box">
             <h4>CAVE</h4>
             <ul>
               <li>Carnage</li>
@@ -152,7 +152,7 @@
               <li>Charlotte de Witte</li>
             </ul>
           </div>
-          <div class="white-box mt-5">
+          <div class="white-box special-box">
             <h4>FREEDOM</h4>
             <ul>
               <li>Claptone</li>
