finnaly fixed menu underline

--- a/belgica.html
+++ b/belgica.html
@@ -48,7 +48,11 @@
           /></a>
         </li>
         <li><a href="./around.html">AROUND THE WORLD</a></li>
-        <li><a href="./belgica.html" class="active">BÉLGICA</a></li>
+        <li>
+          <div class="caja">
+            <a href="./belgica.html" class="active">BÉLGICA</a>
+          </div>
+        </li>
         <li><a href="#contact">TIENDA</a></li>
         <li><a href="#contact">CONTACTO</a></li>
       </ul>
