menu underline fix

--- a/around.html
+++ b/around.html
@@ -49,7 +49,7 @@
           /></a>
         </li>
         <li><a href="./around.html" class="active">AROUND THE WORLD</a></li>
-        <li><a href="#contact">BÉLGICA</a></li>
+        <li><a href="./belgica.html">BÉLGICA</a></li>
         <li><a href="#contact">TIENDA</a></li>
         <li><a href="#contact">CONTACTO</a></li>
       </ul>
