--- a/belgica.html
+++ b/belgica.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 
     <link
@@ -37,21 +37,55 @@
 
   <body>
     <div class="main-menu">
-        <ul class="topnav">
-          <li class="logo-li">
-            <a href="index.html" class="logo"
-              ><img
-                src="images/logotomorrowlandblanco.png"
-                alt="tomorrowland logo"
-                width="75"
-                height="50"
-            /></a>
-          </li>
-          <li><a href="./around.html">AROUND THE WORLD</a></li>
-          <li><a href="./belgica.html" class="active">BÉLGICA</a></li>
-          <li><a href="#contact">TIENDA</a></li>
-          <li><a href="#contact">CONTACTO</a></li>
-        </ul>
+      <ul class="topnav">
+        <li class="logo-li">
+          <a href="index.html" class="logo"
+            ><img
+              src="images/logotomorrowlandblanco.png"
+              alt="tomorrowland logo"
+              width="75"
+              height="50"
+          /></a>
+        </li>
+        <li><a href="./around.html">AROUND THE WORLD</a></li>
+        <li><a href="./belgica.html" class="active">BÉLGICA</a></li>
+        <li><a href="#contact">TIENDA</a></li>
+        <li><a href="#contact">CONTACTO</a></li>
+      </ul>
+    </div>
+
+    <div class="banner">
+      <div><h2 class="helper">This is the banner</h2></div>
+      <div class="flex-container">
+        <div class="flex-item around">
+          <img src="images/logoazul.png" alt="" />
+          <p class="around-1">TOMORROWLAND<br />2020</p>
+          <p class="around-2">Comunicado</p>
+          <a href="#" class="botonflecha"
+            ><img
+              src="images/botonflecha.png"
+              style="float: right;"
+              alt="boton con flecha"
+          /></a>
+        </div>
+
+        <div class="flex-item tickets">
+          <p>
+            Tomorrowland 2020 no puede llevarse acabo debido a la pandemia del Coronavirus y orden guberamental.
+          </p>
+          <p>
+            La 16ta edición del Tomorrowland tomará lugar en el verano del 2021, en las fechas 16-17 de Julio y 23-25 de Julio.
+          </p>
+          <p>
+            En líneas generales, podemos decir que los tickets adquiridos para el Tomorrowland 2020 serán transferidos para el Tomorrowland 2021.
+          </p>
+          <p>Por favor chequear la sección FAQ para mayor información.</p>
+          <div class="button-container">
+            <button>FAQ</button>
+            <button>VER VIDEO</button>
+          </div>
+        </div>
       </div>
+    </div>
   </body>
-  </html>
+</html>
