more edits to belgica page

--- a/belgica.html
+++ b/belgica.html
@@ -74,7 +74,7 @@
             Tomorrowland 2020 no puede llevarse acabo debido a la pandemia del Coronavirus y orden guberamental.
           </p>
           <p>
-            La 16ta edición del Tomorrowland tomará lugar en el verano del 2021, en las fechas 16-17 de Julio y 23-25 de Julio.
+            La 16.ª edición del Tomorrowland tomará lugar en el verano del 2021, en las fechas 16-17 de Julio y 23-25 de Julio.
           </p>
           <p>
             En líneas generales, podemos decir que los tickets adquiridos para el Tomorrowland 2020 serán transferidos para el Tomorrowland 2021.
@@ -87,5 +87,19 @@
         </div>
       </div>
     </div>
+
+    <div class="section2">
+        <div><h2 class="helper">This is the section2</h2></div>
+        <div class="tomo">
+          <h2 class="tomorrow">TOMORROWLAND</h2>
+          <h2 class="after">After Movie</h2>
+          <ul class="vive">
+            <li>Vive hoy</li>
+            <li>Ama mañana</li>
+            <li>Une para siempre</li>
+          </ul>
+        </div>
+      </div>
+
   </body>
 </html>
