working on section 3

--- a/belgica.html
+++ b/belgica.html
@@ -117,14 +117,15 @@
         <div class="col-md-6 alpha-col"></div>
 
         <div class="col-md-6 beta-col">
-          <div class="amistad">
-            <h3>Somos,<br />las personas del mañana</h3>
+
+            <h3>Somos</h3>
+            <h3>las personas del mañana</h3>
             <p>
               Creemos en disfrutar la vida al máximo sin tener que comprometer
               todo. Somos responsable de la generación del mañana y nos
               respetamos el uno al otro y a la Madre Naturaleza.
             </p>
-          </div>
+
         </div>
       </div>
 
