footer added to belgica page

--- a/belgica.html
+++ b/belgica.html
@@ -101,5 +101,74 @@
         </div>
       </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="section4">
+        <div><h2 class="helper">section4</h2></div>
+        <div class="logo">
+          <a  class="logo"
+            ><img
+              src="images/logotomorrowlandblanco.png"
+              alt="tomorrowland logo"
+              width="75"
+              height="50"
+          /></a>
+        </div>
+        <div class="favicons">
+          <ul>
+            <li>
+              <a
+                href="https://www.facebook.com/tomorrowland/"
+                class="logo"
+                target="_blank"
+                ><img src="images/botonfacebook.png" alt="facebook logo"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="https://open.spotify.com/user/tomorrowlandofficial"
+                class="logo"
+                target="_blank"
+                ><img src="images/botonspotify.png" alt="spotify logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/tomorrowland"
+              class="logo"
+              target="_blank"
+                ><img src="images/botoninstagram.png" alt="instagram logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/tomorrowland"
+              class="logo"
+              target="_blank"
+                ><img src="images/botontwitter.png" alt="twitter logo"
+              /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="copyleft">
+          <p>Ⓒ 2020. Tomorrowland.</p>
+        </div>
+        <div class="dummy-radio col-md-12">
+          <a  class="radio"
+            ><img src="images/dummy-radio.png" alt="radio placeholder"
+          /></a>
+        </div>
+      </div>
+
   </body>
 </html>
