removing helper from html

--- a/belgica.html
+++ b/belgica.html
@@ -116,7 +116,7 @@
 
 
       <div class="section4">
-        <div><h2 class="helper">section4</h2></div>
+        <!-- <div><h2 class="helper">section4</h2></div> -->
         <div class="logo">
           <a  class="logo"
             ><img
