--- a/belgica.html
+++ b/belgica.html
@@ -108,15 +108,37 @@
       </div>
     </div>
 
+    <!-- sectionlinea -->
+
+    <div class="sectionlinea">
+      <div class="row">
+        <div class="col">
+          <h2>Linea de tiempo</h2>
+          <h4>Tomorrowland a través de los años</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">slider</div>
+        <div class="col">
+          <h3>El Libro de la Sabiduría</h3>
+          <h3>-El Regreso</h3>
+          <p>Despues de la mágica primera edición del Tomorrowland Winter (Marzo, 2019) la edición de celebración de los 15 años en Bélgica recibió de nuevo a las  más legendarias historias jamás contadas. 400,000 Personas del Mañana escribieron su propio capítulo en el Libro de la Sabiduría y fueron testigos de las presentaciones de Dimitri VEgas&Like Mike, The Chainsmokers, Martin Garrix, Afrojack y otros increíbles artistas.</p>
+        </div>
+      </div>
+    </div>
+
+
     <!-- section3 -->
 
-    <div class="section3">
+    <!-- <div class="section3">
       <div><h2 class="helper">This is the section3</h2></div>
 
-      <div class="row alpha-row">
-        <div class="col-md-6 alpha-col"></div>
+      <div class="row alpha-row ">
+        <div class="col-md-6 alpha-col align-self-center">
+          <img src="images/alpha-background.png" alt="">
+        </div>
 
-        <div class="col-md-6 beta-col">
+        <div class="col-md-6 beta-col align-self-center">
 
             <h3>Somos</h3>
             <h3>las personas del mañana</h3>
@@ -129,21 +151,21 @@
         </div>
       </div>
 
-      <div class="row beta-row">
+      <div class="row beta-row ">
 
-        <div class="col-md-6 gamma-col">
+        <div class="col-md-6 gamma-col align-self-center">
           <h3>Nosotros creemos...</h3>
             <p>
               En el compromiso de crear una realidad que se relacione positivamente con la Madre Naturaleza y que contribuya al bienestar de las siguientes generaciones. Comprometámonos todos y hagámos algo bueno hoy por lo cual estemos agradecidos mañana.
             </p>
         </div>
         
-        <div class="col-md-6 delta-col">
-          
+        <div class="col-md-6 delta-col align-self-center">
+          <img src="images/delta-background.png" alt="">
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <!-- section4 -->
 
