--- a/belgica.html
+++ b/belgica.html
@@ -107,7 +107,45 @@
 
 
 
+      <div class="section3">
+        <div><h2 class="helper">This is the section3</h2></div>
+        <div class="row alpha-row">
+          <div class="col-md-6 alpha-col">
+            
+          </div>
+          <div class="col-md-6 beta-col">
+            <h3>Somos,<br> las personas del mañana</h3>
+            <p>Creemos en disfrutar la vida al máximo sin tener que comprometer todo. Somos responsable de la generación del mañana y nos respetamos el uno al otro y a la Madre Naturaleza.</p>
 
+            
+
+          </div>
+        </div>
+  
+        <div class="row beta-row">
+          <div class="col-md-6 gamma-col">
+            <h3>Instalaciones</h3>
+            <div class="button-container"><button>VER MÁS</button></div>
+          </div>
+          <div class="col-md-6 delta-col">
+            <div class="amistad">
+              <h3>Crea amistades,</h3>
+              <h3>Comparte experiencias</h3>
+              <p>
+                Además de ser un festival para acampar, Dreamville es un un lugar
+                para forjar amistades, compartir experiencias y recargar baterías.
+                <br />En resumen, es una experiencia y locación que todo el mundo
+                siente como su hogar.
+              </p>
+              <div class="auxilio">
+                <a href="#" class="botonflecha"
+                  ><img src="images/botonflecha.png" alt="boton con flecha"
+                /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
