--- a/belgica.html
+++ b/belgica.html
@@ -111,22 +111,121 @@
     <!-- sectionlinea -->
 
     <div class="sectionlinea">
-      <div class="row">
-        <div class="col">
-          <h2>Linea de tiempo</h2>
-          <h4>Tomorrowland a través de los años</h4>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2>Linea de tiempo</h2>
+            <h4>Tomorrowland a través de los años</h4>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col">slider</div>
-        <div class="col">
-          <h3>El Libro de la Sabiduría</h3>
-          <h3>-El Regreso</h3>
-          <p>Despues de la mágica primera edición del Tomorrowland Winter (Marzo, 2019) la edición de celebración de los 15 años en Bélgica recibió de nuevo a las  más legendarias historias jamás contadas. 400,000 Personas del Mañana escribieron su propio capítulo en el Libro de la Sabiduría y fueron testigos de las presentaciones de Dimitri VEgas&Like Mike, The Chainsmokers, Martin Garrix, Afrojack y otros increíbles artistas.</p>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+
+            
+            <div class="carousel">
+              <div
+                id="carouselExampleIndicators"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="1"
+                  ></li>
+                  <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="2"
+                  ></li>
+                  <li
+                    data-target="#carouselExampleIndicators"
+                    data-slide-to="3"
+                  ></li>
+                  
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      class="d-block w-100"
+                      src="images/alpha-slider.png"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="images/beta-slider.png"
+                      alt="Second slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="images/gamma-slider.png"
+                      alt="Third slide"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      class="d-block w-100"
+                      src="images/delta-slider.png"
+                      alt="Third slide"
+                    />
+                  </div>
+                </div>
+                <a
+                  class="carousel-control-prev"
+                  href="#carouselExampleIndicators"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#carouselExampleIndicators"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+
+
+          </div>
+          <div class="col-md-4">
+            <h3>El Libro de la Sabiduría</h3>
+            <h3>-El Regreso</h3>
+            <p>
+              Despues de la mágica primera edición del Tomorrowland Winter
+              (Marzo, 2019) la edición de celebración de los 15 años en Bélgica
+              recibió de nuevo a las más legendarias historias jamás contadas.
+              400,000 Personas del Mañana escribieron su propio capítulo en el
+              Libro de la Sabiduría y fueron testigos de las presentaciones de
+              Dimitri VEgas&Like Mike, The Chainsmokers, Martin Garrix, Afrojack
+              y otros increíbles artistas.
+            </p>
+          </div>
         </div>
       </div>
     </div>
-
 
     <!-- section3 -->
 
@@ -225,5 +324,23 @@
         /></a>
       </div>
     </div>
+
+    <!-- scripts -->
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
