--- a/belgica.html
+++ b/belgica.html
@@ -120,7 +120,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container gallery">
         <div class="row">
           <div class="col-md-8">
 
@@ -149,7 +149,7 @@
                     data-target="#carouselExampleIndicators"
                     data-slide-to="3"
                   ></li>
-                  
+
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
