--- a/belgica.html
+++ b/belgica.html
@@ -564,9 +564,7 @@
 
       <div class="container">
         <div class="row alpha-row">
-          <div class="col-md-6 alpha-col">
-            <!-- <img src="images/alpha-background.png" alt="" /> -->
-          </div>
+          <div class="col-md-6 alpha-col"></div>
 
           <div class="col-md-6 beta-col">
             <div class="text-wrapper">
@@ -593,9 +591,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 delta-col">
-            <!-- <img src="images/delta-background.png" alt="" /> -->
-          </div>
+          <div class="col-md-6 delta-col"></div>
         </div>
       </div>
     </div>
