--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="section4">
       <div><h2 class="helper">section4</h2></div>
       <div class="logo">
-        <a  class="logo"
+        <a class="logo"
           ><img
             src="images/logotomorrowlandblanco.png"
             alt="tomorrowland logo"
@@ -247,16 +247,18 @@
             /></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/tomorrowland"
-            class="logo"
-            target="_blank"
+            <a
+              href="https://www.instagram.com/tomorrowland"
+              class="logo"
+              target="_blank"
               ><img src="images/botoninstagram.png" alt="instagram logo"
             /></a>
           </li>
           <li>
-            <a href="https://twitter.com/tomorrowland"
-            class="logo"
-            target="_blank"
+            <a
+              href="https://twitter.com/tomorrowland"
+              class="logo"
+              target="_blank"
               ><img src="images/botontwitter.png" alt="twitter logo"
             /></a>
           </li>
@@ -266,7 +268,7 @@
         <p>Ⓒ 2020. Tomorrowland.</p>
       </div>
       <div class="dummy-radio col-md-12">
-        <a  class="radio"
+        <a class="radio"
           ><img src="images/dummy-radio.png" alt="radio placeholder"
         /></a>
       </div>
